--- a/represent-map/admin/admin.css
+++ b/represent-map/admin/admin.css
@@ -27,9 +27,9 @@ ul
 }
 #admin
 {
-  border: 1px solid #ddd;
+  border: 1px solid #181d23;
   padding: 20px;
-  background-color: #f2f2f2;
+  background-color: #181d23;
 }
 
 
