--- a/represent-map/map.css
+++ b/represent-map/map.css
@@ -56,20 +56,20 @@ html, body, #map_canvas
   left: 0;
   top: 0;
   z-index: 3;
-  background-color: #fff;
+  background-color: #181d23;
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #181d23;
   overflow: hidden;
   min-width: 850px;
   background: #fcfcfc; /* Old browsers */
-  background: -moz-linear-gradient(top,  #ffffff 0%, #dddddd 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#dddddd)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #ffffff 0%,#dddddd 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */
+  background: -moz-linear-gradient(top,  #ffffff 0%, #181d23 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#181d23), color-stop(100%,#181d23)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #181d23 0%,#181d23 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #181d23 0%,#181d23 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #181d23 0%,#181d23 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #181d23 0%,#181d23 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#181d23',GradientType=0 ); /* IE6-9 */
 }
 .topbar .left
 {
@@ -219,7 +219,7 @@ html, body, #map_canvas
   border-left: 1px solid #ccc;
   border-top: 1px solid #ccc;
   overflow-y: scroll;
-  background-color: #333;
+  background-color: #1e2630;
 }
 .typeahead.dropdown-menu
 {
